--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </section>
     <footer id="main_footer">
-        <p class="my_contact">Contact: 0245084916</p>
+        <p class="my_contact">Contact: +233-24508-4916</p>
         <p class="copyright">Copyright &copy; 2022 All rights reserved</p> 
     </footer>
     <script src="main.js"></script>
